# cmake_intel_blas

./: CMakeLists.txt  func.cpp  main.c  main_cdll.py  main_dl.c  main_module.py  readme.md  test.sh
